<resources>
    <string name="app_name">HungerFREE</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Profile</string>
    <string name="text_title">HungerFREE</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Donate Food</string>
    <string name="tab_text_2">Spot Food</string>
    <string name="tab_text_3">Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login2">Sign in</string>


    <string name="hint_old_pass">Current Password</string>
    <string name="hint_new_pass">New Password</string>
    <string name="hint_confirm_pass">Confirm New Password</string>
    <string name="text_update">Update</string>


    <string name="text_goback">Return to Dashboard</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="fab_profile">Profile </string>
    <string name="fab_password">Change Password </string>
    <string name="fab_logout">Logout </string>


    <string name="text_submit">Submit</string>


</resources>
